2011-08-06  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Cache the selected item.

	* glom/mode_design/print_layouts/window_print_layout_edit.[h|cc]:
	Store the selected item, when it changes, instead of repeatedly 
	requesting it, which requires iteration.

2011-08-06  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Allow editing of positions and size numerically,

	* ui/developer/window_print_layout_edit.glade: Add a row of SpinButtons
	at the bottom to show the position and dimensins of the selected item,
	also letting the user change them by changing the numbers.
	* glom/utility_widgets/canvas/canvas_item_movable.[h|cc]:
	Added signal_selected().
	* glom/utility_widgets/canvas/canvas_editable.[h|cc]:
	Added signal_selection_changed().
	* glom/print_layout/canvas_print_layout.[h|cc]: 
	Added get_selected_items().
	* glom/mode_design/print_layouts/window_print_layout_edit.[h|cc]:
	Constructor: Get the SpinButton widgets from Gtk::Builder, and set their 
	values when an item is selected. Also change the item when the values in 
	the SpinButtons change.

2011-08-05  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Allow the user to select items with a click.

	* glom/utility_widgets/canvas/canvas_item_movable.[h|cc]: 
	Added get/set_selected() and a virtual show_selected() which it calls.
	on_button_release_event(): set the item as 
	- selected if it unselected and the clicked without a move.
	- unselected if it was selected and clicked without a move.
	- selected if it was moved.
	This is roughly like Inkscape's behaviour.
	* glom/utility_widgets/canvas/canvas_group_resizable.[h|cc]:
	Split the manipulator group into two groups (edges and corners), 
	so we can (re)use the edges to show selection.
	Implement show_selected() to show/hide the edges.
	set_manipulator_visibility(): Make sure that we don't hide the 
	edges that are visible to show selection.

	This doesn't actuall do anything useful yet, but it will let us 